Added project dependencies